# vocabulary

backend/: Cargo.toml
backend/src/: main.rs
extension/: background.js  manifest.json  popup.html  popup.js
