[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
http = "1.3"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1.45.1", features = ["rt"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
